		* Clean up port names (unfortunately some symbols are pretty weird too but changing this would break compatibility), use label conventions consistent with fomp
		* Describe project separately and link plugins to it (one description of maintainer etc., and now validates)
		* Make ports with scale points enumerations so a combo box will be shown in hosts (including Ingen)
		* Categorized plugins and remove references to non-existent classes.  I added lv2:EnvelopePlugin for this, it will be included in the next spec release
		* "Envelop" => "Envelope
	* MoogLPF using CV
	* Envelope and Advanced Envelope using CV
	* VCA Linear and VCA Exp using CV
	* VCF using CV

0.0.9:
	* Migrated the code to lvtk (lvtoolkitorg)
	* Starting not to use Gtk Builder
	* Using Luppp Dial for GUI
	* Non Linear Dial (very dirty method)
	* Remove JACKLFO (not necessary, using LV2 Time)
	* LFO frequency can be set manually or in sync with LV2 Time
	* Tranches plugin now using LV2 Time

0.0.8:
	* VCF GUI
	* Ported from AMS:
		- Ring Modulator
		- Sample&Hold
		- VC Panning (with GUI)
		- VC Switch
	* Percussive Env based on the AMS Env
	* MoogLFP ported from LADSPA MCP Plugins
	* Use VC Port

0.0.7:
	* License updated
	* Ported from AMS:
		- Absolute
		- Inv
	* Jack sync LFO based on the AMS one
	* Ported from Tranches (http://hitmuri.net/tardigrade/index.php/En/News)
		- Tranches
	* URI modified to http://avwlv2.sourceforge.net

0.0.6:
	* Basic GUI for Analog Driver, Envelop and Advanced Envelop
	* Ported:
		- CV Source
		- Delay
		- Dynamic Waves (4 Osc)

0.0.5:
	* Bug correction in wscript

0.0.4:
	* GUI for VCO2

0.0.3:
	* Mixer ported (mixer 4->1)
	* Slew Limiter
	* Advanced Envelop
	* A few test presets
	
0.0.2:
	* VC to HZ module (ported from Conv in AMS)
	* HZ to VC module (ported from Omins)
	* Ported:
		- Env
		- VCA (two plugins: VCA Lin and VCA Exp)

0.0.1:
	* Initial version
	* Ported:
		- Analog Driver
		- Amplifier
		- LFO
		- Noise2
		- VCF
		- VCO2
		