@@ -6,23 +6,26 @@
 @prefix ll: <http://ll-plugins.nongnu.org/lv2/namespace#> .
 
 <http://avwlv2.sourceforge.net/plugins/avw/absolute>
-	a lv2:Plugin ,
-		lv2:UtilityPlugin ;
+	a lv2:Plugin, lv2:UtilityPlugin ;
 	lv2:project <http://avwlv2.sourceforge.net/plugins/avw/> ;        
 	doap:name "Signal Absolute Value" ;
 	doap:license <http://opensource.org/licenses/isc> ;
 	ll:pegName "p" ;
 	lv2:optionalFeature lv2:hardRTCapable ;
 	lv2:port [
-		a lv2:AudioPort ,
-			lv2:InputPort ;
+		a lv2:InputPort, lv2:CVPort ;
 		lv2:index 0 ;
 		lv2:symbol "input" ;
-		lv2:name "Input"
+		lv2:name "Input" ;
+		lv2:default 0.0 ;
+		lv2:minimum -1.0 ;
+        lv2:maximum 1.0 ;
 	] ,	[
-		a lv2:AudioPort ,
-			lv2:OutputPort ;
+		a lv2:OutputPort, lv2:CVPort ;
 		lv2:index 1 ;
 		lv2:symbol "output" ;
-		lv2:name "Output"
+		lv2:name "Output" ;
+		lv2:default 0.0 ;
+		lv2:minimum -1.0 ;
+        lv2:maximum 1.0 ;
 	].
