@@ -11,8 +11,7 @@
   guiext:binary <ad_gui.so> .
 
 <http://avwlv2.sourceforge.net/plugins/avw/ad>
-	a lv2:Plugin ,
-		lv2:SimulatorPlugin ;
+	a lv2:Plugin, lv2:SimulatorPlugin ;
 	lv2:project <http://avwlv2.sourceforge.net/plugins/avw/> ;        
 	doap:name "AMS Analog Driver" ;
 	doap:license <http://opensource.org/licenses/isc> ;
@@ -20,75 +19,75 @@
 	guiext:ui <http://avwlv2.sourceforge.net/plugins/avw/ad/gui> ;
 	lv2:optionalFeature lv2:hardRTCapable ;
 	lv2:port [
-		a lv2:AudioPort ,
-			lv2:InputPort ;
+		a lv2:InputPort, lv2:CVPort ;
 		lv2:index 0 ;
 		lv2:symbol "cvin" ;
-		lv2:name "CV In"
+		lv2:name "CV In" ;
+		lv2:default 0.0 ;
+		lv2:minimum -1.0 ;
+        lv2:maximum 1.0 ;
 	] ,	[
-		a lv2:InputPort ,
-			lv2:ControlPort ;
+		a lv2:InputPort, lv2:ControlPort ;
 		lv2:index 1 ;
 		lv2:symbol "detuneAmplitude" ;
 		lv2:name "Detune Amplitude";
 		lv2:default 0.005 ;
 		lv2:minimum 0 ;
-		lv2:maximum 0.084 
+		lv2:maximum 0.084 ;
 	] ,	[
-		a lv2:InputPort ,
-			lv2:ControlPort ;
+		a lv2:InputPort, lv2:ControlPort ;
 		lv2:index 2 ;
 		lv2:symbol "detuneModulation" ;
 		lv2:name "Detune Modulation";
 		lv2:default 0.01 ;
 		lv2:minimum 0.01 ;
-		lv2:maximum 1 
+		lv2:maximum 1 ;
 	] ,	[
-		a lv2:InputPort ,
-			lv2:ControlPort ;
+		a lv2:InputPort, lv2:ControlPort ;
 		lv2:index 3 ;
 		lv2:symbol "detuneRate" ;
 		lv2:name "Detune Rate";
-		lv2:default 0.01 ;
+		lv2:default 1 ;
 		lv2:minimum 0.01 ;
-		lv2:maximum 10 
+		lv2:maximum 10 ;
 	] ,	[
-		a lv2:InputPort ,
-			lv2:ControlPort ;
+		a lv2:InputPort, lv2:ControlPort ;
 		lv2:index 4 ;
 		lv2:symbol "driftAmplitude" ;
 		lv2:name "Drift Amplitude";
 		lv2:default 0.005 ;
 		lv2:minimum 0 ;
-		lv2:maximum 0.084 
+		lv2:maximum 0.084 ; 
 	] ,	[
-		a lv2:InputPort ,
-			lv2:ControlPort ;
+		a lv2:InputPort, lv2:ControlPort ;
 		lv2:index 5 ;
 		lv2:symbol "driftModulation" ;
 		lv2:name "Drift Modulation";
 		lv2:default 0.01 ;
 		lv2:minimum 0.01 ;
-		lv2:maximum 1 
+		lv2:maximum 1 ;
 	] ,	[
-		a lv2:InputPort ,
-			lv2:ControlPort ;
+		a lv2:InputPort, lv2:ControlPort ;
 		lv2:index 6 ;
 		lv2:symbol "driftRate" ;
 		lv2:name "Drift Rate";
 		lv2:default 3 ;
 		lv2:minimum 0.01 ;
-		lv2:maximum 10 
+		lv2:maximum 10 ;
 	] , [
-		a lv2:AudioPort ,
-			lv2:OutputPort ;
+		a lv2:OutputPort, lv2:CVPort ;
 		lv2:index 7 ;
 		lv2:symbol "cvout0" ;
-		lv2:name "CV Out 0"
+		lv2:name "CV Out 0" ;
+		lv2:default 0.0 ;
+		lv2:minimum -1.0 ;
+        lv2:maximum 1.0 ;
 	] , [
-		a lv2:AudioPort ,
-			lv2:OutputPort ;
+		a lv2:OutputPort, lv2:CVPort ;
 		lv2:index 8 ;
 		lv2:symbol "cvout1" ;
-		lv2:name "CV Out 1"
+		lv2:name "CV Out 1" ;
+		lv2:default 0.0 ;
+		lv2:minimum -1.0 ;
+        lv2:maximum 1.0 ;
 	].
