@@ -1,5 +1,5 @@
-#ifndef absolute_peg
-#define absolute_peg
+#ifndef src_absolute_peg
+#define src_absolute_peg
 
 
 #ifndef PEG_STRUCT
@@ -25,9 +25,9 @@ enum p_port_enum {
 };
 
 static const peg_data_t p_ports[] = {
-  { -3.40282e+38, 3.40282e+38, -3.40282e+38, 0, 0, 0 }, 
-  { -3.40282e+38, 3.40282e+38, -3.40282e+38, 0, 0, 0 }, 
+  { -1, 1, 0, 0, 0, 0 }, 
+  { -1, 1, 0, 0, 0, 0 }, 
 };
 
 
-#endif /* absolute_peg */
+#endif /* src_absolute_peg */
