@@ -1,5 +1,5 @@
-#ifndef ad_peg
-#define ad_peg
+#ifndef src_ad_peg
+#define src_ad_peg
 
 
 #ifndef PEG_STRUCT
@@ -32,16 +32,16 @@ enum p_port_enum {
 };
 
 static const peg_data_t p_ports[] = {
-  { -3.40282e+38, 3.40282e+38, -3.40282e+38, 0, 0, 0 }, 
+  { -1, 1, 0, 0, 0, 0 }, 
   { 0, 0.084, 0.005, 0, 0, 0 }, 
   { 0.01, 1, 0.01, 0, 0, 0 }, 
-  { 0.01, 10, 0.01, 0, 0, 0 }, 
+  { 0.01, 10, 1, 0, 0, 0 }, 
   { 0, 0.084, 0.005, 0, 0, 0 }, 
   { 0.01, 1, 0.01, 0, 0, 0 }, 
   { 0.01, 10, 3, 0, 0, 0 }, 
-  { -3.40282e+38, 3.40282e+38, -3.40282e+38, 0, 0, 0 }, 
-  { -3.40282e+38, 3.40282e+38, -3.40282e+38, 0, 0, 0 }, 
+  { -1, 1, 0, 0, 0, 0 }, 
+  { -1, 1, 0, 0, 0, 0 }, 
 };
 
 
-#endif /* ad_peg */
+#endif /* src_ad_peg */
