@@ -12,20 +12,20 @@ using namespace Gtk;
 
 class LfoGUI: public UI<LfoGUI, GtkUI<true>>
 {
-public:
-	LfoGUI(const std::string& URI);
-	void port_event(uint32_t port, uint32_t buffer_size, uint32_t format, const void* buffer);
+	public:
+		LfoGUI(const std::string& URI);
+		void port_event(uint32_t port, uint32_t buffer_size, uint32_t format, const void* buffer);
 
-protected:
-	Gtk::ComboBoxText* m_comboWaveForm;
-	Gtk::CheckButton* m_checkSync;
-	LabeledDial* m_dialFreq;
-	LabeledDial* m_dialTempoDiv;
-	LabeledDial* m_dialPhi0;
+	protected:
+		Gtk::ComboBoxText* m_comboWaveForm;
+		Gtk::CheckButton* m_checkSync;
+		LabeledDial* m_dialFreq;
+		LabeledDial* m_dialTempoDiv;
+		LabeledDial* m_dialPhi0;
 
-	float get_freq();
-	float get_div();
-	float get_phi0();
+		float get_freq();
+		float get_div();
+		float get_phi0();
 };
 
 #endif
